Fix alignment of search bar and the button

--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -77,6 +77,8 @@
   padding-left: 15px;
   border: none;
   line-height: 38px;
+    -webkit-appearance: none;
+  appearance: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   border-top-right-radius: 0;
@@ -91,6 +93,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+    -webkit-appearance: none;
+  appearance: none;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   flex-shrink: 0;
